fix overlapping gui elements while shrinking the window

--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,6 @@ attack-release-graph {
     border-color: #696969;
     background-color: #f0f0f0;
     border-width: 1px;
-    bottom: 5px;
 }
 .fader-label {
     top: 7px;
